--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-slate
-title: "Aperture Science Remote Shell    Source Code"
+title: "Aperture Science Remote Shell Project    Source Code"
